# GhostofSparta

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
backend/bff/: Dockerfile  package-lock.json  package.json
backend/bff/src/: index.ts
backend/core/: alembic.ini  pyproject.toml  requirements.txt
backend/core/app/: config.py  main.py
backend/core/app/api/v1/: agents.py  chat.py  memory.py  missions.py  models.py  router.py  system.py  terminal.py  tools.py  workflows.py
backend/core/app/api/ws/: voice_ws.py
backend/core/app/core/: __init__.py  agent_engine.py  browser_agent.py  event_bus.py  model_router.py  orchestrator.py  prompt_compiler.py  tool_executor.py  types.py  workflow_engine.py
backend/core/app/db/: postgres.py  redis.py
backend/core/app/db/models/: base.py
backend/core/app/memory/: embedding.py  episodic.py  long_term.py  memory_decay.py  memory_manager.py  memory_ranker.py  short_term.py
backend/core/app/models/: anthropic.py  base.py  groq.py  ollama.py  openai.py  openrouter.py  provider_factory.py
backend/core/app/security/: rate_limit.py
backend/core/app/voice/: detection.py  speech.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useSSE.ts
frontend/stores/: agentStore.ts  chatStore.ts  coreStore.ts  layoutStore.ts
frontend/styles/: globals.css
frontend/types/: agents.ts  chat.ts  memory.ts  system.ts  tools.ts
infrastructure/docker/: docker-compose.yml
(+51 files in other folders)
